# Skilled-Eagle_Game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Content/Level/: awesomeLevel.txt
Docs/: Game test.docx  Teamcontract (klas v2a teamnummer 1).docx
Docs/concept/: WaveForms.doc
SFML/doc/: sfml.chm
Source/: Character.cpp  Character.hpp  Game.cpp  Game.h  Level.cpp  Level.h  Menu.cpp  Menu.hpp  bullet.cpp  bullet.hpp  main.cpp  rangedWeapon.cpp  rangedWeapon.hpp  screen_object.cpp  screen_object.hpp  speler.cpp  speler.hpp  wall.cpp  wall.hpp  weapon.cpp  weapon.hpp
Source/Audio/: BeatDetector.cpp  BeatDetector.h  BeatListener.hpp  FmodApi.cpp  FmodApi.hpp  SoundManager.cpp  SoundManager.h
Source/GameStates/: ControllesState.cpp  ControllesState.hpp  ControlsState.cpp  ControlsState.hpp  GameOverState.cpp  GameOverState.hpp  HighScoreState.cpp  HighScoreState.hpp  IState.cpp  IState.h  LevelSelectState.cpp  LevelSelectState.hpp  MenuState.cpp  MenuState.h  MusicSelectState.cpp  MusicSelectState.hpp  PauseState.cpp  PauseState.hpp  PlayState.cpp  PlayState.h  SettingsState.cpp  SettingsState.h  SoonState.cpp  SoonState.hpp  SoundTestState.cpp  SoundTestState.hpp  SplashState.cpp  SplashState.hpp
Source/ScreenObjects/: Block.cpp  Block.h  Bullet.cpp  Bullet.hpp  Finish.cpp  Finish.hpp  HudDisplay.cpp  HudDisplay.hpp  PowerUp.cpp  PowerUp.hpp  ScreenObject.cpp  ScreenObject.h  StatusBar.cpp  StatusBar.hpp  bullet.cpp  bullet.hpp
Source/ScreenObjects/enemies/: CyberEnforcer.cpp  CyberEnforcer.h
Source/ScreenObjects/enemys/: CyberEnforcer.cpp  CyberEnforcer.h
Source/ScreenObjects/items/: MeleeWeapon.cpp  MeleeWeapon.hpp  RangedWeapon.cpp  RangedWeapon.hpp  Weapon.hpp  rangedWeapon.cpp  rangedWeapon.hpp  weapon.hpp
Source/Utility/: DebugOverlay.cpp  DebugOverlay.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifiers.hpp
Source/screenObjects/: Block.cpp  Block.h  ScreenObject.h  bullet.cpp  bullet.hpp
Source/screenObjects/items/: PowerUp.cpp  PowerUp.hpp  rangedWeapon.cpp  weapon.hpp
assets/Highscores/: awesomeLevel.txt
assets/Levels/: awesomeLevel.txt  level1.txt  level2.txt  level3.txt
assets/Settings/: Controls.txt  Settings.txt
assets/sounds/beats/: cyka.blyat  cyka.mp3.beats  naker.beats  song1.mp3.beats  song4.mp3.beats
cmake_modules/: FindFMOD.cmake
